# quantforge

./: .dockerignore  .env.example  .env.production.example  .gitignore  .gitleaks.toml  .vercelignore  DEPLOYMENT.md  Dockerfile  Dockerfile.dashboard  LICENSE  README.md  SECURITY.md  docker-compose.observability.yml  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt  vercel.json
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  gitleaks.yml  warmup.yml
.streamlit/: config.toml
docs/: ARCHITECTURE.md  QUICKSTART.md  STRATEGIES.md
examples/: 01_data_and_indicators.py  02_options_surface.py  03_portfolio_optimization.py  04_strategy_comparison.py  05_risk_analysis.py  06_ml_strategy.py  07_pairs_trading.py  08_walk_forward.py  09_regime_aware_strategy.py  10_full_research_pipeline.py  11_fixed_income.py  12_real_data_tournament.py  13_real_data_pipeline.py  14_real_ml_training.py  15_improved_tournament.py
k8s/: README.md  api-deployment.yaml  configmap.yaml  ingress.yaml  namespace.yaml  networkpolicy.yaml  redis.yaml  secret.yaml
n8n/: README.md  daily-risk-check.json  ml-retrain-monthly.json  options-alert.json  weekly-tournament.json
observability/: README.md  grafana-dashboard.json  prometheus-alerts.yaml  prometheus.yml
quantforge/: __init__.py  __main__.py  cli.py  config.py
quantforge/alerts/: __init__.py  channels.py  engine.py  rules.py
quantforge/analytics/: __init__.py  attribution.py  benchmark.py  performance.py  tearsheet.py
quantforge/api/: __init__.py  app.py  audit.py  auth.py  cache.py  demo_broadcaster.py  jobs.py  jwt_auth.py  logging_config.py  metrics.py  schemas.py  security.py  tracing.py  ws.py
quantforge/backtest/: __init__.py  broker.py  commission.py  engine.py  slippage.py  tca.py
quantforge/core/: __init__.py  constants.py  event.py  order.py  portfolio.py  position.py
quantforge/dashboard/: __init__.py  app.py  components.py
quantforge/data/: __init__.py  crypto.py  loader.py  synthetic.py
quantforge/execution/: __init__.py  algos.py  impact.py
quantforge/fixed_income/: __init__.py  bond.py  yield_curve.py
quantforge/indicators/: __init__.py  statistical.py  technical.py
quantforge/ml/: __init__.py  factor_model.py  features.py  forecast.py  regime.py  trainer.py
quantforge_client/: __init__.py  client.py
tests/: conftest.py  test_alerts_and_audit_api.py  test_alerts_jwt_rl.py  test_analytics.py  test_api.py  test_backtest.py  test_cli_remote.py  test_config.py  test_core.py  test_crypto.py  test_demo_broadcaster.py  test_dev_key_bootstrap.py  test_execution.py  test_fixed_income.py  test_iframe_security.py  test_indicators.py  test_jobs.py  test_ml.py  test_multi_leg_options.py  test_options.py  test_order_types.py  test_portfolio.py  test_rate_limit_and_security.py  test_risk.py  test_risk_attribution.py  test_sdk_client.py  test_simulation_kelly.py  test_stats.py  test_strategies.py  test_tca.py  test_ws.py
web/: index.html
(+56 files in other folders)
