[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quantforge"
version = "0.1.0"
description = "A full-stack quantitative trading research platform"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "QuantForge" }]
license = { text = "MIT" }
dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "scipy>=1.12",
    "scikit-learn>=1.4",
    "statsmodels>=0.14",
    "PyYAML>=6.0",
    "tqdm>=4.66",
]

[project.optional-dependencies]
viz = ["matplotlib>=3.8", "seaborn>=0.13", "plotly>=5.20", "streamlit>=1.33"]
ml = ["numba>=0.59", "arch>=7.0"]
data = ["yfinance>=0.2.40"]
dev = ["pytest>=8", "pytest-cov>=5", "hypothesis>=6.152.1", "ruff>=0.4"]

[tool.setuptools.packages.find]
where = ["."]
include = ["quantforge*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "NPY", "RUF"]
ignore = ["E501"]
